<resources>

    <string name="app_name">polinim</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="login_email">EMAIL</string>
    <string name="login_password">PASSWORD</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_pw">Forgot Password</string>
    <string name="loading">LOADING...</string>

    <string name="internet">Please Check Your Network Connection</string>
    <string name="login_problem">Could not login. Please try again!</string>

    <!-- Register -->
    <string name="register_email">EMAIL</string>
    <string name="register_password">PASSWORD</string>
    <string name="are_you_user">Are you already a member?</string>
    <string name="enter_email">Please enter email!</string>
    <string name="enter_pw">Please enter password!</string>
    <string name="pw_min_char">Password should be minimum 6 chars!</string>

    <string name="register_successfully">Registered Successfully</string>
    <string name="register_problem">Could not register. Please try again!</string>

    <!-- User Info -->
    <string name="user_info_name">Name and Surname</string>
    <string name="user_info_nickname">Nickname</string>
    <string name="user_info_finish">Finish</string>
    <string name="enter_name_surname">Please enter Name and Surname!</string>
    <string name="enter_nickname">Please enter Nickname!</string>


    <!-- Mainactivity-->
    <string name="camera_problem">Sorry! Your device doesnt support camera</string>
    <string name="point">Point</string>
    <string name="fail_directory">Oops! Failed create a directory!</string>


    <!-- Drawer -->
    <string name="drawer_name">Name</string>
    <string name="drawer_nickname">Nickname</string>
    <string name="drawer_score">Score</string>

    <string name="drawer_homepage">Homepage</string>
    <string name="drawer_my_profile">My Profile</string>
    <string name="drawer_my_shares">My Shares</string>
    <string name="drawer_my_follow">My Follow</string>
    <string name="drawer_my_group">My Group</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_my_logout">Logout</string>

    <!-- Forgot pw -->
    <string name="forgot_pw_email">EMAIL</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="change_password">Change Password</string>
    <string name="sent_successfully">Sent Successfully</string>

    <!-- My profile -->
    <string name="my_profile_posts">POSTS</string>
    <string name="my_profile_answers">ANSWERS</string>

    <string name="my_profile_name">Name</string>
    <string name="my_profile_email">Email</string>
    <string name="my_profile_phone">Phone</string>
    <string name="my_profile_twitter">Twitter</string>
    <string name="my_profile_facebook">Facebook</string>

    <!-- My profile Setting-->
    <string name="my_profile_setting_nickname">Nickname</string>
    <string name="my_profile_setting_name">Name and Surname</string>
    <string name="my_profile_setting_email">Email</string>
    <string name="my_profile_setting_phone">Phone</string>
    <string name="my_profile_setting_twitter">Twitter</string>
    <string name="my_profile_setting_facebook">Facebook</string>
    <string name="save">SAVE</string>
    <string name="change_photo">Change Photo</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="select_picture">Select Picture</string>

    <!-- My groups -->
    <string name="my_group_title">MY GROUPS</string>
    <string name="create_group">Create a Group</string>
    <string name="edit_my_groups">Edit My Groups</string>

    <!-- Settings -->
    <string name="settings_title">SETTINGS</string>
    <string name="favorite_topics">Favorite Topics</string>

    <!-- Ask-->
    <string name="image">Add Image</string>
    <string name="add_image">Please Add Image</string>
    <string name="choose_category">Please Choose a Category</string>
    <string name="choose_time">Please Choose a Time</string>
    <string name="add_question">Please Add a Question</string>
    <string name="question">Question</string>
    <string name="category">Category</string>
    <string name="time">Time</string>
    <string name="question_hint">Which one is better?</string>
    <string name="ask_button">ASK</string>
    <string name="select_action">Select Action</string>
    <string name="select_gallery">Select photo from gallery</string>
    <string name="select_camera">Capture photo from camera</string>
    <string name="choose_images">Please choose images</string>

    <!-- Ask Category-->
    <string name="select_category">SELECT A CATEGORY</string>
    <string name="car_name">CAR</string>
    <string name="car_expression">Car, Motorcycle, Bicycle</string>
    <string name="clothes_name">CLOTHES</string>
    <string name="clothes_expression">Clothes, Shoes, Bags and more</string>
    <string name="cosmetic_name">COSMETIC</string>
    <string name="cosmetic_expression">Lipstick, Perfume, Mascara and more</string>
    <string name="design_name">DESIGN</string>
    <string name="design_expression">Logo, Poster, Picture and more</string>
    <string name="film_name">FILM and BOOK</string>
    <string name="film_expression">Movie, Book, Series, Music</string>
    <string name="fun_name">FUNNY</string>
    <string name="fun_expression">Everything About Fun</string>
    <string name="furniture_name">FURNITURE</string>
    <string name="furniture_expression">Sofa, Chair, Table, Bed and more</string>
    <string name="jewelry_name">GLASSES</string>
    <string name="jewelry_expression">Jewelry, Watches, Glasses</string>
    <string name="machine_name">ELECTRONIC</string>
    <string name="machine_expression">TV, Fridge, Washing Machine and more</string>
    <string name="other_name">OTHER</string>
    <string name="other_expression">Everything Else</string>
    <string name="sports_name">SPORT</string>
    <string name="sports_expression">Football, Basketball, Volleyball and more</string>
    <string name="tablet_name">PHONE and PC</string>
    <string name="tablet_expression">Phone, Tablet, PC, Laptop</string>

    <!-- Ask Time-->
    <string name="select_time">SELECT A TIME</string>
    <string name="half_hour">30 Minutes</string>
    <string name="one_hour">1 Hour</string>
    <string name="two_hour">2 Hours</string>
    <string name="three_hour">3 Hours</string>
    <string name="six_hour">6 Hours</string>
    <string name="twelve_hour">12 Hours</string>
    <string name="one_day">24 Hours</string>
    <string name="two_day">48 Hours</string>

    <!-- Inner Post-->
    <string name="comment_hint">Write a comment</string>
    <string name="comment_send">SEND</string>
    <string name="follow_added">This post is added to follow list</string>
    <string name="in_follow_list">It is in follow list</string>
    <string name="chose_it_before">You chose it before</string>
    <string name="add_comment">Please Add a Comment</string>

    <!-- Popup profile-->
    <string name="popup_score">Score</string>
    <string name="popup_answer">Answers</string>
    <string name="popup_post">Posts</string>
    <string name="follow_me">Follow Me</string>
    <string name="comment_added">Comment added</string>






    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>


    <!-- Strings related to activity_register -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="delete_user">Delete User</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="polinim">Polinim</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile_names">Display name</string>
    <string name="induce_smile">Induce Smile</string>

    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_country">Country</string>
    <string name="edit_profile_phone">Phone number</string>
    <string name="edit_profile_hobby">Hobby</string>
    <string name="select_date">Date</string>
    <string name="save_edit">Save edit</string>
    <string name="profile_name">Induce Smile</string>
    <string name="country_location">Sweden</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_online">Online</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="twitterUsername">\@joeytribbiani</string>

</resources>
