<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgView_logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_logo_down"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/my_group_title"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20dp"/>

            <Button
                android:id="@+id/btn_create_group"
                android:text="@string/create_group"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_edit_groups"
                android:text="@string/edit_my_groups"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
