<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/gradient"
    android:id="@+id/login_relativelayout"
    tools:context=".entry.Login">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/imgView_logo_up"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_logo_up"/>

        <ImageView
            android:id="@+id/imgView_logo_down"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:adjustViewBounds="true"
            android:visibility="gone"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_logo_down"/>

        <RelativeLayout
            android:id="@+id/login_layer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@id/imgView_logo_down">

            <LinearLayout
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="25dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <AutoCompleteTextView
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_email"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_login"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/login"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>
        
    </RelativeLayout>

    <ImageView
        android:id="@+id/imgView_logo_name"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/relative"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/logo_name2"/>

    <RelativeLayout
        android:id="@+id/sign_up_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="gone"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textStyle="bold"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_forgot_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@color/transparent"
            android:textStyle="bold"
            android:text="@string/forgot_pw"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </RelativeLayout>
</RelativeLayout>