<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="420dp"
    android:background="@color/blacklight"
    android:padding="5dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/tv_popup_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="@color/white"
        android:text="X"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:background="@color/grey_transparent"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleView_popup_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="5dp"
            android:padding="3dp"
            android:layout_gravity="center"
            android:src="@drawable/user" />

        <TextView
            android:id="@+id/tv_popup_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-light"
            android:text="Nikita"
            android:textSize="22dp"
            android:layout_marginTop="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="@color/orange"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/tv_popup_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="150"
                android:textSize="18dp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_score"
                android:textSize="18dp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:background="@color/green"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/tv_popup_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="19"
                android:textSize="18dp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_answer"
                android:textSize="18dp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:background="@color/bluelight"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/tv_popup_posts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="50"
                android:textSize="18dp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popup_post"
                android:textSize="18dp"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follow_me"
        android:background="@drawable/border_edittext"
        android:padding="10dp"
        android:layout_marginTop="35dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"/>

</LinearLayout>